--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,5 @@ add_executable(HttpParser
         utils/SocketIO/SocketBuffer.hpp
         utils/Foundation/File.cpp
         utils/Foundation/File.hpp
-        utils/Foundation/StreamIOHelper.hpp)
+        utils/Foundation/StreamIOHelper.hpp
+        utils/Foundation/BasicIO.hpp)
