fix: specialize File template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,5 @@ add_executable(HttpParser
         utils/Foundation/LifeManagement/ArgumentParser.cpp
         utils/Foundation/LifeManagement/ArgumentParser.hpp
         utils/Foundation/Exceptions/ExitException.cpp
-        utils/Foundation/Exceptions/ExitException.hpp)
+        utils/Foundation/Exceptions/ExitException.hpp
+        utils/Foundation/File.cpp)
