feat: daemon process
Add daemon class and some new static resources

TODO:
- optimize main function
- close stdio file descriptor after fork()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,4 +50,7 @@ add_executable(HttpParser
         utils/Foundation/LifeManagement/ArgumentParser.hpp
         utils/Foundation/Exceptions/ExitException.cpp
         utils/Foundation/Exceptions/ExitException.hpp
-        utils/Foundation/File.cpp)
+        utils/Foundation/File.cpp
+        Static/CommandLineOutput.hpp
+        utils/Foundation/LifeManagement/Daemon.cpp
+        utils/Foundation/LifeManagement/Daemon.hpp)
