--- a/Handler/Base/CMakeLists.txt
+++ b/Handler/Base/CMakeLists.txt
@@ -9,6 +9,10 @@ include_directories(.)
 add_library(GetHandler SHARED
         GetHandler.hpp
         GetHandler.cpp)
+add_library(PostHandler SHARED
+        PostHandler.hpp
+        PostHandler.cpp)
 target_link_libraries(GetHandler HttpParser_Core)
+target_link_libraries(PostHandler HttpParser_Core)
 file(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/../../cmake-build-debug/plugins/)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../cmake-build-debug/plugins/)
