chore: add test build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ add_executable(HttpParser main.cpp)
 target_link_libraries(HttpParser HttpParser_Core pthread dl)
 
 add_subdirectory(Handler/Base)
+add_subdirectory(Test)
