--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,21 @@
 cmake_minimum_required(VERSION 3.15)
 project(HttpParser)
 
+set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/prefix)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/HttpParser/plugins)
+
 set(CMAKE_CXX_STANDARD 17)
 if (CMAKE_BUILD_TYPE STREQUAL Debug)
     set(CMAKE_CXX_FLAGS "-g -fPIC ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
 elseif (CMAKE_BUILD_TYPE STREQUAL Release)
     set(CMAKE_CXX_FLAGS "-O3 -fPIC ${CMAKE_CXX_FLAGS}")
 elseif (CMAKE_BUILD_TYPE STREQUAL RelWithDebInfo)
     set(CMAKE_CXX_FLAGS "-g -O3 -fPIC ${CMAKE_CXX_FLAGS}")
 endif()
 
-set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/prefix)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/HttpParser/plugins)
-
-if (CMAKE_BUILD_TYPE STREQUAL Debug)
-    add_definitions(-D__PREFIX=\"${CMAKE_BINARY_DIR}\")
-    add_definitions(-D_GREATBRIDF_CONFIG_PATH=\"${CMAKE_BINARY_DIR}/etc/ConfigTemplate.json\")
-endif ()
+add_definitions(-D__PREFIX=\"${CMAKE_INSTALL_PREFIX}\")
 
 include_directories(.)
 include_directories(HttpParser_Core/include)
@@ -39,15 +37,28 @@ SET(SOURCE
 
 add_executable(HttpParser ${HEADER} ${SOURCE})
 target_link_libraries(HttpParser HttpParser_Core pthread dl)
-target_link_libraries(HttpParser GetHandler PostHandler PlainTextHandler)
-target_link_libraries(HttpParser NodeJS)
+add_dependencies(HttpParser GetHandler PostHandler PlainTextHandler NodeJS)
 
 # plugins
 
 #file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/)
-file(COPY ${CMAKE_SOURCE_DIR}/Static/ConfigTemplate.json DESTINATION ${CMAKE_BINARY_DIR}/etc)
+file(COPY ${CMAKE_SOURCE_DIR}/Static/ConfigTemplate.json DESTINATION ${CMAKE_BINARY_DIR}/etc/HttpParser)
+file(RENAME ${CMAKE_BINARY_DIR}/etc/HttpParser/ConfigTemplate.json ${CMAKE_BINARY_DIR}/etc/HttpParser/config.json)
 
 add_subdirectory(HttpParser_Core)
 add_subdirectory(Handler/Base)
 add_subdirectory(Handler/Servlet)
 add_subdirectory(Test)
+
+# install
+
+install(
+        TARGETS HttpParser
+        RUNTIME DESTINATION bin
+)
+
+install(
+        FILES Static/ConfigTemplate.json
+        DESTINATION etc/HttpParser
+        RENAME config.json
+)
